# NLP-Enhanced-Deep-Q-Network-for-Financial-Trading-A-Multi-Module-System-with-Ablation-Analysis

./: .env.example  .gitignore  DASHBOARD_UPGRADE_PLAN.md  Dockerfile  Fintech_Guidelines (1).docx  README.md  UPGRADE_PLAN.md  ablation_report_v2.md  analyze_regime.py  analyze_shap.py  analyze_statistics.py  check_db.py  check_news_db.py  check_sentiment_db.py  collect_data.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  step_shap.py
.github/workflows/: ci.yml
agents/: research_agent.py
dashboard/: app.py
dashboard/components/: charts.py
data_ingestion/: market_data.py  news_fetcher.py  rss_fetcher.py  scheduler.py  ticker_lookup.py
data_storage/: db_manager.py  schema.py
interfaces/: __init__.py
nlp_pipeline/: aggregator.py  preprocessor.py  sentiment_finbert.py  sentiment_lexicon.py  sentiment_llm.py  sentiment_lr.py
rl_engine/: dqn.py  env.py  evaluation.py  explainer.py  replay_buffer.py  train.py
tests/: test_db.py  test_market_data.py  test_rl_env.py
utils/: __init__.py  capability_manager.py  indicators.py  metrics.py  statistics.py
vector_store/: chroma_store.py
