[project]
name = "nlp-rl-trading-platform"
version = "1.0.0"
description = "End-to-end NLP-Driven Reinforcement Learning Trading Platform"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "FinTech Group"}]
keywords = ["nlp", "reinforcement-learning", "trading", "finbert", "dqn", "quantitative-finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
nlp-rl-run = "main:main"
nlp-rl-scheduler = "data_ingestion.scheduler:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
